--- a/_includes/post_footer.html
+++ b/_includes/post_footer.html
@@ -1,9 +1,5 @@
 <footer class="article-footer">
-    <div class="authorimage">
-        <img src="/assets/img/avatar.JPG" alt="My Avatar" class="img-circle">
-    </div>
     <section class="author">
-        <h4><a href="/about.html">梁窠金</a></h4>
-        <a href="mailto:liungkejin@gmail.com">liungkejin@gmail.com</a>
+    <p>评论区功能还未完善</p>
     </section>
 </footer>
