--- a/_includes/author_header.html
+++ b/_includes/author_header.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row-center">
             <div class="col-md-7">
-                <a href="index.html"><img src="/assets/img/avatar.JPG" title="Avatar" alt="My Avatar"></a>
+                <a href="index.html"><img src="/assets/img/avatar.png" title="Avatar" alt="My Avatar"></a>
                 <h4>{{ site.data.author.name }}</h4>
                 <p>{{ site.data.author.title }}</p>
                 <p class="muted">{{ site.data.author.address }}</p>
@@ -13,9 +13,6 @@
                 <p><i class="fa fa-github fa-fw"></i><a href="https://github.com/{{ site.data.author.github }}" target="_blank">  <font color="#5F9EA0">{{ site.data.author.github }}</font> </a></p>
                 <p><i class="fa fa-envelope-o fa-fw"></i> {{ site.data.author.email }} </p>
             </div>
-            <!-- <div class="col-sm-4 visible-md-block visible-lg-block">
-                <a href="#" class="btn btn-dark"><i class="icon-file icon-white"></i> Download.pdf </a>
-            </div> -->
         </div>
     </div>
 </div>
